--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Jinja2==2.10.3
 gunicorn
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
-Cython>=0.29.23
+Cython==0.29.21
 numpy==1.19.5
 scipy>=1.3.2
 scikit-learn==0.24.2
